# python-test-action

./: .pre-commit-config.yaml  README.md  action.yaml
.fixtures/: README.md
.fixtures/addopts-cov-only/: pyproject.toml
.fixtures/addopts-cov-only/tests/: test_mypkg.py
.fixtures/flat-layout-no-config/: pyproject.toml
.fixtures/omit-excludes-install/: pyproject.toml
.fixtures/src-layout-path-source/: pyproject.toml
.fixtures/src-layout-pkg-source/: pyproject.toml
.fixtures/src-layout-pkg-source/src/mypkg/: __init__.py
.fixtures/src-layout-pkg-source/tests/: test_mypkg.py
.github/workflows/: release-drafter.yaml  testing.yaml
scripts/: detect_coverage.py
tests/: test_detect_coverage.py
tests/fixtures/: README.md
tests/fixtures/addopts-cov-only/: pyproject.toml
tests/fixtures/flat-layout-no-config/: pyproject.toml
tests/fixtures/src-layout-pkg-source/: pyproject.toml
tests/fixtures/src-layout-pkg-source/src/mypkg/: __init__.py
