# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 The Linux Foundation

# Fixture: src-layout-pkg-source
#
# The recommended shape: src/ layout with a package-name source list
# in [tool.coverage.run] and NO --cov in addopts. This exercises the
# action's "source set, no addopts --cov" detection branch:
#
#   - Detection sees source_configured=true, cov_in_addopts=false.
#   - The 'no target configured' warning is suppressed (source
#     counts as configuration).
#   - The action injects a bare '--cov' to activate pytest-cov;
#     [tool.coverage.run].source = ["mypkg"] then scopes collection
#     to the configured package. The action does NOT inject
#     '--cov=mypkg' here - the source list already targets the
#     package, so a bare '--cov' is sufficient and idiomatic.
#
# Package-name source ('mypkg' rather than 'src') is the recommended
# shape because coverage.py resolves the location via import, so it
# works for both editable and non-editable installs. A path-based
# source ('src') only matches editable layouts.

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mypkg"
version = "0.0.0"
description = "Coverage fixture: src layout, package-name source list"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "coverage[toml]>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mypkg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Deliberately no '--cov' here: this fixture exercises the cell
# where source is configured but addopts contains no coverage
# directive. The action must inject a bare '--cov' itself for
# pytest-cov to activate; [tool.coverage.run].source below scopes
# collection to the configured package.
addopts = ["-v"]

[tool.coverage.run]
# Package-name source. coverage.py resolves the location via import,
# so this works regardless of where the package executes from.
source = ["mypkg"]

[tool.coverage.report]
show_missing = true
